# isaac-sim-reconstruction-benchmark

./: .gitignore  LICENSE  PLAN.md  README.md  proposal.md  pyproject.toml
data/: asset_taxonomy.json  gt_full_warehouse.json  retrieval_pool.json  world_pool.json
samples/: render_warehouse_views.py
samples/renders/: render_summary.json
samples/renders/floor_area_overview/: scene_info.json
samples/renders/forklift_closeup/: scene_info.json  segmentation_labels.json
samples/renders/rack_aisle_perspective/: scene_info.json
samples/renders/right_aisle_perspective/: scene_info.json
samples/renders/shelf_closeup/: scene_info.json
scripts/: demo_evaluation.py  discover_assets.py  export_demo_usd.py  extract_gt.py  retrieve_asset.py
src/isaacsim_bench/cli/: main.py
src/isaacsim_bench/evaluator/: __init__.py  matching.py  runner.py
src/isaacsim_bench/evaluator/metrics/: component.py  coverage.py  placement.py  relation.py  retrieval.py  scene_success.py  (+1 more)
src/isaacsim_bench/extractor/: __init__.py  usd_parser.py
src/isaacsim_bench/generator/: base.py  isaac_sim.py  templates.py
src/isaacsim_bench/retrieval/: __init__.py  clip_retrieval.py
src/isaacsim_bench/schemas/: __init__.py  manifest.py  pools.py  prediction.py  scene.py  splits.py  taxonomy.py
src/isaacsim_bench/taxonomy/: __init__.py  match_regime.py  registry.py
src/isaacsim_bench/validator/: __init__.py  checks.py  runner.py
tests/: conftest.py  test_cli.py  test_evaluator_matching.py  test_evaluator_metrics.py  test_extractor.py  test_schemas.py  test_taxonomy.py  test_validator.py
